--- a/zadanie-2/style.css
+++ b/zadanie-2/style.css
@@ -26,19 +26,21 @@
   margin: 100px auto;
   width: 160px;
   height: 600px;
-  border: 1px solid #d3d3d3;
+  border: 0.7px solid #d3d3d3;
   font-family: Arial, Helvetica, sans-serif;
+  color: #000;
 }
 
 /* Closing icon */
 .close {
   position: absolute;
-  top: 6px;
-  right: 3px;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  top: 0;
+  right: 0;
+  margin-top: 6px;
+  margin-right: 3px;
   width: 10px;
   height: 10px;
+  z-index: 2;
 }
 
 .close:before, .close:after {
@@ -47,6 +49,7 @@
   height: 10px;
   width: 2px;
   background-color: #d3d3d3;
+  clear: 'both';
 }
 
 .close:before {
@@ -65,7 +68,7 @@
 
 /* Products / slider */
 .slider {
-  border: 1px solid #d3d3d3;
+  border: 0.7px solid #d3d3d3;
   height: 88%;
   position: relative;
   width: 100%;
