--- a/zadanie-2/style.scss
+++ b/zadanie-2/style.scss
@@ -8,8 +8,10 @@
 /* Variables */
 $color-btn: #ef4136;
 $color-border: #d3d3d3;
+$color-text-primary: #000;
+$color-text-secondary: #fff;
 $font-main: Arial, Helvetica, sans-serif;
-$border: 1px solid $color-border;
+$border: .7px solid $color-border;
 
 /* Mixins */
 @mixin flex($flex-direction, $justify-content, $align-items) {
@@ -27,24 +29,28 @@ $border: 1px solid $color-border;
   height: 600px;
   border: $border;
   font-family: $font-main;
+  color: $color-text-primary;
 }
 
 /* Closing icon */
 .close {
   position: absolute;
-  top: 6px;
-  right: 3px;
-  align-self: flex-end;
+  top: 0;
+  right: 0;
+  margin-top: 6px;
+  margin-right: 3px;
   width: 10px;
   height: 10px;
+  z-index: 2;
 
   &:before,
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     height: 10px;
     width: 2px;
     background-color: $color-border;
+    clear: 'both';
   }
 
   &:before {
@@ -58,6 +64,7 @@ $border: 1px solid $color-border;
   &:hover {
     cursor: pointer;
   }
+
 }
 
 /* Products / slider */
